--- a/app/com/clashcode/web/views/index.scala.html
+++ b/app/com/clashcode/web/views/index.scala.html
@@ -1,7 +1,9 @@
 @(message: String)
 
-@main("Welcome to Play") {
+@main("CodeClash Live Feed") {
 
-    @message
+    <div>
+    <textarea id="output" style="width: 100%; height: 500px;"></textarea>
+    </div>
 
 }
