--- a/app/com/clashcode/web/views/main.scala.html
+++ b/app/com/clashcode/web/views/main.scala.html
@@ -4,12 +4,14 @@
 
 <html>
     <head>
-        <title>@title</title>
+        <title>CodeClash Live Feed</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/app.js?1")" type="text/javascript"></script>
     </head>
     <body>
-        @content
+
+    @content
+
     </body>
 </html>
