--- a/app/com/clashcode/web/views/index.scala.html
+++ b/app/com/clashcode/web/views/index.scala.html
@@ -1,6 +1,10 @@
-@(message: String)
+@(websocketUrl: String)
 
 @main("CodeClash Live Feed") {
+
+    <script>
+        var wsUri = "@websocketUrl";
+    </script>
 
     <div>
     <textarea id="output" style="width: 100%; height: 500px;"></textarea>
