--- a/app/com/clashcode/web/views/index.scala.html
+++ b/app/com/clashcode/web/views/index.scala.html
@@ -1,6 +1,6 @@
 @(websocketUrl: String)
 
-@main("CodeClash Live Feed") {
+@main("ClashCode Live Feed") {
 
     <script>
         var wsUri = "@websocketUrl";
