--- a/app/com/clashcode/web/views/main.scala.html
+++ b/app/com/clashcode/web/views/main.scala.html
@@ -5,6 +5,7 @@
 <html>
     <head>
         <title>@title</title>
+        <link rel="stylesheet" media="screen" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/app.js?1")" type="text/javascript"></script>
