--- a/app/com/clashcode/web/views/index.scala.html
+++ b/app/com/clashcode/web/views/index.scala.html
@@ -6,8 +6,59 @@
         var wsUri = "@websocketUrl";
     </script>
 
-    <div>
-    <textarea id="output" style="width: 100%; height: 500px;"></textarea>
+    <div class="container">
+
+        <h1>Akka Workshop Live Feed</h1>
+
+        <div class="row">
+            <div class="col-md-4">
+
+                <table class="table-striped table table-condensed" id="status-table">
+                    <thead>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+
+            </div>
+            <div class="col-md-8">
+
+                <table class="table-striped table" id="players-table">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Score</th>
+                            <th>Coop %</th>
+                            <th>Games</th>
+                            <th>Last message</th>
+                            <th>Ping</th>
+                            <th>Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+
+                <table class="table-striped table" id="games-table">
+                    <thead>
+                        <tr>
+                            <th>Latest games</th>
+                            <th></th>
+                            <th>Player 1</th>
+                            <th>Player 2</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+
+            </div>
+        </div>
+
+        <button id="connect-button" class="btn">Connect</button>
+        <button id="reset-button" class="btn">Reset</button>
+
     </div>
 
 }
