basic high score for submitted robots

--- a/app/com/clashcode/web/views/index.scala.html
+++ b/app/com/clashcode/web/views/index.scala.html
@@ -27,26 +27,11 @@
                     <thead>
                         <tr>
                             <th>Name</th>
-                            <th>Score</th>
-                            <th>Coop %</th>
-                            <th>Games</th>
+                            <th>Robots</th>
+                            <th>Best Robot</th>
+                            <th>Generation</th>
                             <th>Last message</th>
-                            <th>Ping</th>
                             <th>Status</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
-
-                <table class="table-striped table" id="games-table">
-                    <thead>
-                        <tr>
-                            <th>Latest games</th>
-                            <th></th>
-                            <th>Player 1</th>
-                            <th>Player 2</th>
-                            <th></th>
                         </tr>
                     </thead>
                     <tbody>
