simple javascript visualization

--- a/app/com/clashcode/web/views/index.scala.html
+++ b/app/com/clashcode/web/views/index.scala.html
@@ -8,20 +8,26 @@
 
     <div class="container">
 
-        <h1>Akka Workshop Live Feed</h1>
+        <h3>Robot Evolution Live Feed</h3>
 
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-6">
 
-                <table class="table-striped table table-condensed" id="status-table">
-                    <thead>
-                    </thead>
+                <div class="field"></div>
+
+            </div>
+            <div class="col-md-6">
+
+                <table class="table-striped table" id="robot-table">
                     <tbody>
                     </tbody>
                 </table>
 
             </div>
-            <div class="col-md-8">
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
 
                 <table class="table-striped table" id="players-table">
                     <thead>
@@ -33,6 +39,19 @@
                             <th>Last message</th>
                             <th>Status</th>
                         </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+
+                <table class="table-striped table table-condensed" id="status-table">
+                    <thead>
                     </thead>
                     <tbody>
                     </tbody>
