--- a/app/com/clashcode/web/views/main.scala.html
+++ b/app/com/clashcode/web/views/main.scala.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/moment.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/game.js?1")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/app.js?1")" type="text/javascript"></script>
     </head>
     <body>
