awesome robot graphics

--- a/app/com/clashcode/web/views/index.scala.html
+++ b/app/com/clashcode/web/views/index.scala.html
@@ -1,6 +1,6 @@
 @(websocketUrl: String)
 
-@main("Prisoner's Dilemma Live Feed") {
+@main("Robot Evolution Live Feed") {
 
     <script>
         var wsUri = "@websocketUrl";
