--- a/app/com/clashcode/web/views/index.scala.html
+++ b/app/com/clashcode/web/views/index.scala.html
@@ -1,4 +1,4 @@
-@(websocketUrl: String)
+@(websocketUrl: String, host: String)
 
 @main("Robot Evolution Live Feed") {
 
@@ -8,7 +8,15 @@
 
     <div class="container">
 
-        <h3>Robot Evolution Live Feed</h3>
+        <div class="row">
+            <div class="col-md-6">
+                <h3>Robot Evolution Live Feed</h3>
+            </div>
+            <div class="col-md-6">
+                <h3 style="text-align: right">@host</h3>
+            </div>
+        </div>
+
 
         <div class="row">
             <div class="col-md-6">
@@ -18,10 +26,8 @@
             </div>
             <div class="col-md-6">
 
-                <table class="table-striped table" id="robot-table">
-                    <tbody>
-                    </tbody>
-                </table>
+                <div id="robot-info">
+                </div>
 
             </div>
         </div>
