improved visualization for beamer resolutions

--- a/app/com/clashcode/web/views/index.scala.html
+++ b/app/com/clashcode/web/views/index.scala.html
@@ -18,13 +18,13 @@
         </div>
 
 
-        <div class="row">
-            <div class="col-md-6">
+        <div class="row" style="margin-bottom: 20px">
+            <div class="col-sm-7">
 
                 <div class="field"></div>
 
             </div>
-            <div class="col-md-6">
+            <div class="col-sm-5">
 
                 <div id="robot-info">
                 </div>
