added next robot button, sorting of player list to frontend

--- a/app/com/clashcode/web/views/index.scala.html
+++ b/app/com/clashcode/web/views/index.scala.html
@@ -66,8 +66,9 @@
             </div>
         </div>
 
-        <button id="connect-button" class="btn">Connect</button>
         <button id="reset-button" class="btn">Reset</button>
+        <button id="connect-button" class="btn">Connect</button>
+        <button id="next-button" class="btn">Next</button>
 
     </div>
 
